<resources>
    <string name="about_title_text">关于</string>
    <string name="about_version_name">版本</string>
    <string name="about_copyright_cn">阿里巴巴版本所有</string>
    <string name="copyright_title_text">版权声明</string>
    <string name="about_copyright_en"> © 2009-2017 Aliyun.com. All rights reserved.</string>
    <string name="copyright_info_en">
     一、权利归属\n
1.1.    阿里云的Logo、“阿里云”等文字、图形及其组合，以及阿里云的其他标识、徽记、阿里云服务的名称等为阿里云及其关联公司在中国和其他国家的注册商标。未经阿里云书面授权，任何人不得以任何方式展示、使用或做其他处理（包括但不限于复制、传播、展示、镜像、上传、下载），也不得向他人表明您有权展示、使用或做其他处理。\n
1.2.    阿里云所有的产品、服务、技术与所有程序（以下或简称“技术服务”）的知识产权均归属于阿里云或归其权利人所有。\n
1.3.    除非阿里云另行声明，阿里云拥有阿里云发布文档等信息（包括但不限于文字、图形、图片、照片、音频、视频、图标、色彩、版面设计、电子文档）的所有权利（包括但不限于版权、商标权、专利权、商业秘密和其他所有相关权利）。未经阿里云许可，任何人不得擅自使用如上内容（包括但不限于通过程序或设备监视、复制、转播、展示、镜像、上传、下载阿里云内的任何内容）。被授权浏览、复制、打印和传播属于阿里云内信息内容的，该等内容都不得用于商业目的且所有信息内容及其任何部分的使用都必须包括此权利声明。\n
\n
     二、责任限制\n
2.1.    阿里云在此提示，您在使用阿里云服务期间应当遵守中华人民共和国的法律，不得危害网络安全，不得利用阿里云的服务从事他人侵犯名誉、隐私、知识产权和其他合法权益的活动。尽管有前述提示，阿里云不对您使用阿里云服务的用途和目的承担任何责任。\n
\n
    三、知识产权保护\n
我们尊重知识产权，反对并打击侵犯知识产权的行为。任何组织或个人认为阿里云客户端页面内容可能侵犯其合法权益的，可以通过向阿里云的客服提出书面权利通知，阿里云将在收到知识产权权利人合格通知后依法尽快处理。\n

</string>
    <string name="mobile_assert">请填写正确的手机号</string>
    <string name="server_error">网络不好，请重试!</string>
    <string name="email_assert">请填写正确的邮箱</string>
    <string name="find_pwd_code">验证码:</string>
    <string name="digits_phone">0123456789</string>
    <string name="code_hint">请输入有效验证码</string>
    <string name="code_get">获取验证码</string>
    <string name="code_get_hint">%ss 后重试</string>
    <string name="timer_send_re">重新发送</string>
    <string name="timer_sending">发送中...</string>
    <string name="find_pwd_new">新密码:</string>
    <string name="pwd_new_hint">请输入新密码</string>
    <string name="find_pwd_affirm">确认密码:</string>
    <string name="login_pwd_affirm_hint">请输入确认密码</string>
    <string name="find_pwd_btn">立即找回</string>
    <string name="digits_numeric">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@!.</string>
    <string name="rncontainer_switch_env">环境切换</string>
    <string name="rncontainer_env_test">开发环境</string>
    <string name="rncontainer_env_release">生产环境</string>
    <string name="rncontainer_debug_ip_title">请输入本机IP地址</string>
    <string name="rncontainer_debug_ip_ok">确定</string>
    <string name="rncontainer_debug_ip_cancel">取消</string>
    <string name="rncontainer_illeagel_ip_address">无效的IP地址</string>
    <string name="hint_alink_business_ex_demo_method_name">请输入方法名</string>
    <string name="hint_alink_business_ex_demo_method_args">请输入参数（JSON格式）</string>
    <string name="button_alink_business_ex_demo_go">Go</string>
    <string name="app_name_jh">钜豪商城</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="scanner_view_tip_text">将二维码/条形码放入框内，即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. Have you given the camera permission to the APP? Or you may need to restart the device.</string>
    <string name="hint_scan">Please put the code in the frame to scan automatically.</string>
    <string name="str_home">首页</string>
    <string name="str_Intelligent">智能</string>
    <string name="str_me">个人中心</string>
    <string name="str_exit_toast">再按一次退出系统</string>
    <string name="str_login_timeout">登录状态失效</string>
    <string name="str_edit_countdown">编辑定时</string>
    <string name="str_week">星期</string>
    <string name="str_onetime">仅限一次</string>
    <string name="str_everyday">每天</string>
    <string name="str_monday">一</string>
    <string name="str_tuesday">二</string>
    <string name="str_wednesday">三</string>
    <string name="str_thursday">四</string>
    <string name="str_friday">五</string>
    <string name="str_saturday">六</string>
    <string name="str_sunday">日</string>
    <string name="str_open">开启</string>
    <string name="str_close">关闭</string>
    <string name="str_everyweek">每星期</string>
    <string name="str_add_success">添加成功</string>
    <string name="str_edit_success">修改成功</string>
    <string name="str_mon">星期一</string>
    <string name="str_tue">星期二</string>
    <string name="str_wed">星期三</string>
    <string name="str_thurs">星期四</string>
    <string name="str_fri">星期五</string>
    <string name="str_sat">星期六</string>
    <string name="str_sun">星期日</string>
    <string name="str_switch_open">开关：开启</string>
    <string name="str_switch_close">开关：关闭</string>
    <string name="str_delete_countdown">确定要删除此定时吗？</string>
    <string name="str_delete_success">删除成功</string>
    <string name="str_Intelligent_white_light">智能白灯光</string>
    <string name="str_Intelligent_socket">智能插座</string>
    <string name="str_Intelligent_switch">智能开关</string>
    <string name="str_Intelligent_lock">智能门锁</string>
    <string name="str_init_exception">初始化异常</string>
    <string name="str_version_sdk_old">手机版本太低</string>
    <string name="str_socket_open">插座已开启</string>
    <string name="str_socket_close">插座已关闭</string>
    <string name="str_light_open">电源已开启</string>
    <string name="str_light_close">电源已关闭</string>
    <string name="str_device_offline">该设备处于离线状态</string>
    <string name="str_select_one_devices_to_share">请选择一个要共享的设备</string>
    <string name="str_choose">选择</string>
    <string name="str_enter_account">请输入用户账号或邮箱</string>
    <string name="str_share_success">分享成功</string>
    <string name="str_my_home">我的家</string>
    <string name="str_loading">加载中</string>
    <string name="str_room_temp">室内温度</string>
    <string name="str_outdoor_temp">室外空气</string>
    <string name="str_gohome">回家</string>
    <string name="str_go_out">离家</string>
    <string name="str_get_up">起床</string>
    <string name="str_keting">客厅</string>
    <string name="str_socket">插座</string>
    <string name="str_kaiguan">开关</string>
    <string name="str_light">灯</string>
    <string name="str_unbind_device">确定要解绑此设备吗？</string>
    <string name="str_blue_light">蓝牙灯</string>
    <string name="str_offline">离线</string>
    <string name="str_online">在线</string>
    <string name="str_setting_success">设置成功</string>
    <string name="str_excute_failed">执行失败</string>
    <string name="str_excute_success">执行成功</string>
    <string name="str_setting_failed">设置失败</string>
    <string name="str_scene">一键执行</string>
    <string name="str_auto">自动化</string>
    <string name="str_add_scene">一键控制多设备，或通过智能音响语音控制</string>
    <string name="str_add_device">添加设备</string>
    <string name="application_name">钜豪智慧家庭</string>
    <string name="str_devices_all">所有设备</string>
    <string name="str_have_no_devices">暂时没有设备</string>
    <string name="str_you">优</string>
    <string name="str_qing">晴</string>
    <string name="str_excute">执行</string>
    <string name="str_small_component">小组件</string>
    <string name="str_notice">消息中心</string>
    <string name="str_share">共享</string>
    <string name="str_thirth">第三方服务</string>
    <string name="str_suggestion">意见反馈</string>
    <string name="str_setting">设置</string>
    <string name="about">关于</string>
    <string name="str_device">设备</string>
    <string name="str_notice_2">通知</string>
    <string name="str_no_notice">暂无设备消息</string>
    <string name="str_device_share">设备共享</string>
    <string name="str_my_devices" >我的设备</string>
    <string name="str_share_devices">共享设备</string>
    <string name="str_add_share">添加共享</string>
    <string name="str_save">完成</string>
    <string name="str_country">国家 / 地区</string>
    <string name="str_86">中国+86</string>
    <string name="str_account">账号</string>
    <string name="str_mobile_email">手机号码或邮箱</string>
    <string name="str_account_setting">账号设置</string>
    <string name="str_head">头像</string>
    <string name="str_nickname">昵称</string>
    <string name="str_click_setting">点击设置</string>
    <string name="str_logout">退出登录</string>
    <string name="str_sure_logout">确定要退出吗？</string>
    <string name="str_logout_success">已成功退出账号</string>
    <string name="str_about">关于</string>
    <string name="str_pingfen">评分</string>
    <string name="str_privace">隐私政策</string>
    <string name="str_privacy_content">我们深知隐私对您的重要性，为了更全面地呈现我们收集和使用您个人信息的相关情况，我们根据最新法律法规的要求，对隐私政策进行了详细的修订。当您点击【同意】即表示您已充分阅 读、理解并接受更新过的，《隐私政策》的全部内容。请花一些时间熟悉我们的隐私政策，如果您有任何问题，请随时联系我们 。</string>
    <string name="str_cancel">取消</string>
    <string name="str_ensure">确定</string>
    <string name="str_privacy">隐私权政策</string>
    <string name="str_agreement">服务协议</string>
    <string name="str_family_management">家庭管理</string>
    <string name="str_language">zh-CN</string>
    <string name="str_buildtype">CHINA</string>
    <string name="server_client_id">27865164</string>
    <string name="facebook_app_id">27865164</string>
    <string name="fb_login_protocol_scheme">27865164</string>
    <string name="str_change_version">切换国际版</string>
    <string name="str_change_version_2" >切换到中国版</string>
    <string name="str_add_scene_str">添加场景/自动化</string>
    <string name="add_device_net_failed">配网失败，请重新配网。</string>
    <string name="add_device_net_success">配网成功！</string>
    <string name="str_tm_tips1">\"天猫精灵，打开灯\"</string>
    <string name="str_tm_tips2">\"天猫精灵，把灯调亮一点\"</string>
    <string name="str_tm_tips3">\"天猫精灵，打开窗帘\"</string>
    <string name="str_tm_tips4">\"天猫精灵，把风扇调到3档\"</string>
    <string name="str_tm_tips5">\"天猫精灵，把取暖温度调到30度\"</string>
    <string name="str_agree_share">同意该用户的设备分享吗？</string>
    <string name="str_bind_success">绑定成功！</string>
    <string name="str_cancel_share">要取消该设备的分享吗？</string>
    <string name="str_cancel_success">取消成功！</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="str_bind_step">绑定步骤</string>
    <string name="binded_devices">可控设备</string>
    <string name="platform">平台</string>
    <string name="str_you_can_say_that">您可以这样说</string>
    <string name="str_alx_tips1" >"Alexa,turn on/off my light"</string>
    <string name="str_alx_tips2" >"Alexa,brighten/dim my light"</string>
    <string name="str_alx_tips3" >"Alexa,set my light to yellow"</string>
    <string name="str_alx_tips4" >"Alexa,set my light to warm white"</string>
    <string name="str_use_amazon">使用Amazon Alexa</string>
    <string name="str_step_1">1. 绑定设备</string>
    <string name="str_step_2">2.开启“Cloud Intelligence”技能</string>
    <string name="str_step_3">3.关联账号</string>
    <string name="str_step_4">4.语音控制设备</string>
    <string name="str_step_1_detail">购买一台支持“钜豪智慧家庭”APP绑定的设备，添加到首页的设备列表中，可以对其重命名，如\"My Light\"。</string>
    <string name="str_step_2_detail">您得拥有一台Amazon Echo音箱，然后在Alexa APP的Skills中搜索“Cloud Intelligence”，点击“Enable”。</string>
    <string name="str_step_3_detail">输入“钜豪智慧家庭”APP的账号和密码，将“钜豪智慧家庭”和 “Alexa” 进行关联。</string>
    <string name="str_step_4_detail">关联后，就可以对“钜豪智慧家庭”APP绑定的设备，进行语音控制了，如：
“Alexa, turn on/off my light.”
“Alexa, brighten/dim my light.”
“Alexa, set my light to yellow.”
“Alexa, set my light to warm white</string>
    <string name="str_disconnect_devices">要解绑该用户的设备吗？</string>
    <string name="str_unbind_device_success">解绑成功</string>
    <string name="str_nickname_input">请输入昵称</string>
    <string name="str_please_input_name">请输入名称</string>
    <string name="str_click_to_set_nickname">点击设置昵称</string>
    <string name="str_edit_name">编辑名称</string>
    <string name="str_suggest_record">反馈记录</string>
    <string name="str_please_choose_question_type">请选择问题类型</string>
    <string name="str_device_suggest">设备反馈</string>
    <string name="str_feedback_exeption">反馈故障</string>
    <string name="str_function_suggest">功能建议</string>
    <string name="str_other_problem">其他问题</string>
</resources>