<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="45dp">
<RelativeLayout
    android:layout_width="50dp"
    android:layout_height="match_parent"
    android:onClick="goBack">
    <ImageView
        android:background="@mipmap/nav_left"
        android:layout_centerInParent="true"
        android:layout_width="10dp"
        android:layout_height="20dp" />
</RelativeLayout>
    <TextView
        android:text="@string/str_suggestion"
        android:textSize="17sp"
        android:textColor="#252525"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_record"
        android:text="@string/str_suggest_record"
        android:textColor="@color/theme"
        android:textSize="17sp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
    <TextView
        android:background="#f4f4f4"
        android:text="@string/str_please_choose_question_type"
        android:textSize="12sp"
        android:textColor="#999999"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<TextView
    android:id="@+id/tv_device_feedback"
    android:text="@string/str_device_suggest"
    android:paddingLeft="15dp"
    android:gravity="center_vertical"
    android:textColor="#333333"
    android:textSize="15sp"
    android:layout_width="match_parent"
    android:layout_height="55dp" />
    <TextView
        android:id="@+id/tv_feeback_failure"
        android:text="@string/str_feedback_exeption"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
    <TextView
        android:id="@+id/tv_function_suggest"
        android:text="@string/str_function_suggest"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
    <TextView
        android:id="@+id/tv_other_problem"
        android:text="@string/str_other_problem"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
</LinearLayout>