<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:onClick="goBack">
                <ImageView
                    android:layout_centerInParent="true"
                    android:background="@mipmap/nav_left"
                    android:layout_width="10dp"
                    android:layout_height="20dp" />
            </RelativeLayout>
            <TextView
                android:text="Amazon alexa"
                android:textSize="15sp"
                android:textColor="#666666"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <ImageView
            android:background="#ffffff"
            android:src="@mipmap/img_amazon"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="120dp" />
        <TextView
            android:id="@+id/tv_bind"
            android:text="@string/str_bind_step"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="60dp" />
        <TextView
            android:text="@string/binded_devices"
            android:textColor="#777777"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lv_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/platform"
            android:textColor="#777777"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <TextView
                android:text="@string/str_you_can_say_that"
                android:textColor="#333333"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/str_alx_tips1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/str_alx_tips2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/str_alx_tips3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/str_alx_tips4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>