<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="175dp"
    android:background="@drawable/bg_corner_white_15">
    <TextView
        android:id="@+id/tv_title"
        android:text="@string/str_edit_name"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@null"
        android:layout_margin="10dp"
        android:paddingLeft="15dp"
        android:hint="@string/str_please_input_name"
        />
    <View
        android:layout_marginTop="10dp"
        android:background="#e4e4e4"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cancel"
            android:text="@string/str_cancel"
            android:textSize="16sp"
            android:textColor="#999999"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:background="#e4e4e4"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_ensure"
            android:text="@string/str_ensure"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>