<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="45dp">
    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:onClick="goBack">
        <ImageView
            android:background="@mipmap/nav_left"
            android:layout_centerInParent="true"
            android:layout_width="10dp"
            android:layout_height="20dp" />
    </RelativeLayout>
    <TextView
        android:text="@string/str_add_share"
        android:textColor="#252525"
        android:textSize="17sp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_save"
        android:text="@string/str_save"
        android:textSize="17sp"
        android:textColor="#666666"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
    <View
        android:background="#f8f8f8"
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">
    <TextView
        android:text="@string/str_country"
        android:textColor="#252525"
        android:textSize="16sp"
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_weight="125"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content" />
        <com.view.TextViewPlus
            android:id="@+id/tv_region"
            android:text="@string/str_86"
            android:textSize="16sp"
            android:textColor="#252525"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:layout_width="0dp"
            android:layout_weight="250"
            android:drawableRight="@mipmap/my_icon_right"
            android:paddingRight="15dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:background="#dddddd"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/str_account"
            android:textColor="#252525"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="125"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_phone"
            android:hint="@string/str_mobile_email"
            android:textColorHint="#999999"
            android:textSize="14sp"
            android:textColor="#252525"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:layout_width="0dp"
            android:layout_weight="250"
            android:background="@null"
            android:paddingRight="15dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:background="#dddddd"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>